--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         list-style-type: decimal;
         padding-left:40px;
       }
+      textarea {
+        max-width: 100%;
+        width: 100%;
+        height: 40vh;
+      }
     </style>
 
     <script src="js/app.js"></script>
@@ -84,17 +89,17 @@
         <ion-list id="side-menu21-list1" data-componentid="list1">
           <ion-item class="item-icon-left assertive" id="side-menu21-list-item1" data-componentid="list-item1">
             <i class="icon ion-heart-broken"></i>ফেরেঅসা</ion-item>
-          <ion-item class="item-icon-left" id="side-menu21-list-item11" ui-sref="tabsController.details" menu-close="" data-componentid="list-item11">
+          <ion-item class="item-icon-right" id="side-menu21-list-item11" ui-sref="tabsController.details" menu-close="" data-componentid="list-item11">
             <i class="icon ion-chevron-right"></i>প্রোফাইলে ১</ion-item>
-          <ion-item class="item-icon-left" id="side-menu21-list-item12" ui-sref="tabsController.details" menu-close="" data-componentid="list-item12">
+          <ion-item class="item-icon-right" id="side-menu21-list-item12" ui-sref="tabsController.details" menu-close="" data-componentid="list-item12">
             <i class="icon ion-chevron-right"></i>প্রোফাইলে ২</ion-item>
-          <ion-item class="item-icon-left" id="side-menu21-list-item13" ui-sref="tabsController.details" menu-close="" data-componentid="list-item13">
+          <ion-item class="item-icon-right" id="side-menu21-list-item13" ui-sref="tabsController.details" menu-close="" data-componentid="list-item13">
             <i class="icon ion-chevron-right"></i>প্রোফাইলে ৩</ion-item>
-          <ion-item class="item-icon-left" id="side-menu21-list-item14" ui-sref="tabsController.details" menu-close="" data-componentid="list-item14">
+          <ion-item class="item-icon-right" id="side-menu21-list-item14" ui-sref="tabsController.details" menu-close="" data-componentid="list-item14">
             <i class="icon ion-chevron-right"></i>প্রোফাইলে ৪</ion-item>
-          <ion-item class="item-icon-left" id="side-menu21-list-item15" ui-sref="tabsController.details" menu-close="" data-componentid="list-item15">
+          <ion-item class="item-icon-right" id="side-menu21-list-item15" ui-sref="tabsController.details" menu-close="" data-componentid="list-item15">
             <i class="icon ion-chevron-right"></i>প্রোফাইলে ৫</ion-item>
-          <ion-item class="item-icon-left" id="side-menu21-list-item16" ui-sref="tabsController.details" menu-close="" data-componentid="list-item16">
+          <ion-item class="item-icon-right" id="side-menu21-list-item16" ui-sref="tabsController.details" menu-close="" data-componentid="list-item16">
             <i class="icon ion-chevron-right"></i>প্রোফাইলে ৬</ion-item>
         </ion-list>
       </ion-content>
